# Claims

./: .cproject  .gitignore  .gitignore.swp  .project  AdaptiveEndPoint.cpp  AdaptiveEndPoint.h  Config.cpp  Debug.h  Environment.cpp  Environment.h  Message.h  PortManager.cpp  README.md  Server.cpp  TimeOutReceiver.cpp  configure  data_type.h  hash.h  ids.h  libtool  mysqlserver
.deps/: Config.Po  Environment.Po  IDsGenerator.Po  Server.Po  mysqlserver.Po
Block/: Block.cpp  BlockFix.h  BlockStream.cpp  BlockStream.h  DynamicBlockBuffer.cpp  DynamicBlockBuffer.h  PartitionedBlockBuffer.cpp
Block/test/: testBlockStreamVar.cpp
BlockIterator/: CopyBasedFilterIteratorBlockFix.h
BlockStreamIterator/: BlockStreamExchangeBase.cpp  BlockStreamExchangeBase.h  BlockStreamExchangeLowerBase.cpp  BlockStreamFilter.h  BlockStreamPrint.cpp  Makefile.am
BlockStreamIterator/.deps/: BlockStreamExchangeBase.Po  BlockStreamExchangeLowerBase.Po  BlockStreamFilter.Po  BlockStreamIteratorBase.Po  BlockStreamLimit.Po  BlockStreamPerformanceMonitorTop.Po  BlockStreamPerformanceTest.Po  BlockStreamPrint.Po  BlockStreamRandomMemAccess.Po  BlockStreamResultCollector.Po  BlockStreamSingleColumnScan.Po  ExpandableBlockStreamIteratorBase.Po
BlockStreamIterator/ParallelBlockStreamIterator/: BlockStreamAggregationIterator.cpp  BlockStreamAggregationIterator.h  BlockStreamCombinedIterator.h  BlockStreamExchangeBroadcast.cpp  BlockStreamExchangeLowerBroadcast.cpp  BlockStreamJoinIterator.cpp  BlockStreamJoinIterator.h  BlockStreamProjectIterator.cpp  BlockStreamProjectIterator.h  BlockStreamSortIterator.cpp  BlockStreamSortIterator.h  BlockStreamSortShuffleMapper.cpp  BlockStreamSortShuffleMapper.h  BlockStreamSortShuffleReducer.cpp  BlockStreamSortShuffleReducer.h  EBSExchangeNRP.cpp  EBSExchangeNRP.h  EBSExchangeNRPLower.cpp  EBSExchangeNRPLower.h  ExpandableBlockStreamBroadcastExchange.cpp  Makefile.am  (+20 more)
BufferManager/: BufferManager.h
Catalog/: Catalog.h  Partitioner.h  ProjectionBinding.cpp
Client/: Makefile.am
Executor/: Coordinator.h  ExchangeTracker.cpp  ExchangeTracker.h  IteratorExecutorMaster.cpp  IteratorExecutorMaster.h  IteratorExecutorSlave.cpp  IteratorExecutorSlave.h  Makefile.am
IndexManager/: CSBIndexBuilding.cpp  Makefile.am
Loader/: Hdfsloader.cpp  Makefile.am
LogicalQueryPlan/: DataflowPartitionDescriptor.cpp  DataflowPartitionDescriptor.h  EqualJoin.cpp  EqualJoin.h  LogicalQueryPlanRoot.cpp  Project.cpp  Project.h  Sort.cpp
Parsetree/: ExecuteLogicalQueryPlan.cpp  Makefile.am  parsetree2logicalplan.cpp  sql.l~  sql.tab.cpp
PerformanceMonitor/: .project  BlockStreamPerformanceMonitorTop.cpp  BlockStreamPerformanceTest.cpp  PerformanceIteratorTop.cpp
PerformanceTest/: DeepIteratorNoExchange.cpp  block_exchange_multiple_ways.cpp  block_iterator.cpp  block_stream_iterator_test.cpp  blockstreamaggregationTest.cpp  blockstreambroadcastTest.cpp  blockstreamcombineTest.cpp  blockstreamjoinTest.cpp  blockstreamjoinTest_____poc.cpp  expandable_block_stream_test.cpp  expandable_block_stream_test_two_level.cpp
Resource/: Makefile.am  NodeTracker.h  ResourceManagerMaster.h  ResourceManagerSlave.h
Scheduler/: Makefile.am  master.cpp  master.h
Schema/: SchemaFix.h  SchemaVar.cpp  SchemaVar.h
Serialization/: RegisterDerivedClass.cpp  RegisterDerivedClass.h
Test/: TestMain.cpp  block_stream_iterator_serilaization_test.cpp  main.cpp  test_iterator.cpp  test_scdong.cpp
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
cmysql/: Makefile  Makefile.in  c_mysql_callback.cpp  c_mysql_callback.h  c_mysql_loginer.h  c_mysql_server.cpp  c_mysql_server.h
codegen/: codegen_test.h
common/: ExpressionCalculator.cpp  ExpressionCalculator.h  ExpressionItem.cpp  ExpressionItem.h  Expression_item.cpp  Makefile.am  TypeCast.h  TypePromotionMap.h  data_type.cpp  data_type.h  functions.h
conf/: config
doc/: Makefile.am  configure.ac
doc/BlcokIterator/: Makefile.am
doc/Block/: Makefile.am
doc/BlockStreamIterator/: Makefile.am
doc/BlockStreamIterator/ParallelBlockStream/: Makefile.am
doc/BufferManager/: Makefile.am
doc/Catalog/: Makefile.am
doc/Catalog/stat/: Makefile.am
doc/Client/: Makefile.am
doc/Daemon/: Makefile.am
doc/Executor/: Makefile.am
doc/IndexManager/: Makefile.am
doc/Loader/: Makefile.am
doc/LogicalQueryPlan/: Makefile.am
doc/Parsetree/: Makefile.am
doc/PerformanceMonitor/: Makefile.am
doc/PerformanceTest/: Makefile.am
doc/Resource/: Makefile.am
doc/Scheduler/: Makefile.am
doc/Schema/: Makefile.am
doc/Serializaiton/: Makefile.am
doc/Test/: Makefile.am
doc/Test/Suit/: Makefile.am
doc/Website/claims/css/: .#bootstrap.min.css
doc/common/: Makefile.am
doc/iterator/: Makefile.am
doc/storage/: Makefile.am
doc/try/: Makefile.am
doc/types/: Makefile.am
doc/utility/: Makefile.am
iterator/: AggregationIterator.h  CombinedIterator.cpp  Copy of ExchangeIteratorEager.cpp_early_version  ExchangeIteratorEager.cpp  ExchangeIteratorEagerLower.cpp  ExchangeIteratorEagerLower.cpp_new  ExchangeIteratorLowerWithWideDependency.cpp  ExchangeIteratorWithWideDependency.cpp  FilterIterator.cpp  FilterIterator.h  JoinIterator.h  PrintIterator.cpp  RandomMemAccessIterator.cpp  SingleColumnScanIterator.cpp  SingleColumnScanIteratorFix.cpp
loader/: data_injector.cpp
logical_operator/: logical_outer_join.cpp  logical_scan.cpp
logical_query_plan/: logical_equal_join.cpp  logical_sort.cpp
physical_query_plan/: BlockStreamAggregationIterator.cpp  BlockStreamCombinedIterator.cpp  BlockStreamExchangeLowerBase.cpp  BlockStreamInIterator.cpp  BlockStreamNestLoopJoinIterator.cpp  BlockStreamNestLoopJoinIterator.h  Makefile.am  physical_join.cpp  physical_join.h  physical_sort.cpp  physical_sort.h
stmt_handler/: select_exec.cpp
storage/: BlockManager.h  BlockManagerMaster.h  ChunkStorage.cpp  MemoryStore.cpp  MemoryStore.h  PartitionStorage.cpp  PartitionStorage.h
try/: select.cpp
utility/: generator.h  test_tool.h
utils/: Comparator.h  Logging.h  hashmap.hpp  hashtable.h
缺省值/: makefile  sources.mk  subdir.mk
(+269 files in other folders)
